# Microservices

class_1_poetry/: pyproject.toml
class_1_poetry/class_1_poetry/: main.py
class_1_poetry/tests/: test_main.py
class_2_helloworld/: pyproject.toml
class_2_helloworld/class_2_helloworld/: main.py
class_2_helloworld/tests/: test_main.py
